// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HealthScoreCard Component HealthScoreCard snapshot with instanceStatus 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiCard-root makeStyles-card-53 MuiPaper-rounded"
>
  <div
    className="MuiCardContent-root"
  >
    <div
      className="makeStyles-contentDiv-55"
    >
      <div>
        <div
          className="MuiBox-root MuiBox-root-99"
        >
          Workflow Health Score
        </div>
        <div
          className="MuiBox-root MuiBox-root-100"
        >
          90
        </div>
      </div>
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root makeStyles-cardIcon-50"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM6.5 9L10 5.5 13.5 9H11v4H9V9H6.5zm11 6L14 18.5 10.5 15H13v-4h2v4h2.5z"
        />
      </svg>
    </div>
    <div
      className="makeStyles-flexDiv-51"
    >
      <div
        className="MuiBox-root MuiBox-root-101 makeStyles-box-52"
      >
        Failed: 
        10
      </div>
      <div
        className="MuiBox-root MuiBox-root-102"
      >
        Started: 
        30
      </div>
    </div>
  </div>
</div>
`;

exports[`HealthScoreCard Component HealthScoreCard snapshot without instanceStatus 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiCard-root makeStyles-card-53 MuiPaper-rounded"
>
  <div
    className="MuiCardContent-root"
  >
    <div
      className="makeStyles-contentDiv-55"
    >
      <div>
        <div
          className="MuiBox-root MuiBox-root-86"
        >
          Workflow Health Score
        </div>
        <div
          className="MuiBox-root MuiBox-root-87"
        >
          --
        </div>
      </div>
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root makeStyles-cardIcon-50"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM6.5 9L10 5.5 13.5 9H11v4H9V9H6.5zm11 6L14 18.5 10.5 15H13v-4h2v4h2.5z"
        />
      </svg>
    </div>
    <div
      className="makeStyles-flexDiv-51"
    >
      <div
        className="MuiBox-root MuiBox-root-97 makeStyles-box-52"
      >
        Failed: 
        --
      </div>
      <div
        className="MuiBox-root MuiBox-root-98"
      >
        Started: 
        --
      </div>
    </div>
  </div>
</div>
`;
